# Romeo-s-69

./: .gitignore  README.md  ΣΥΖΗΤΗΣΗ.md  ΣΥνδεσμοι.md
docs/archive/romeos-tsakas/romeos-display-v2/squareline-arc-import/: CMakeLists.txt  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
docs/archive/romeos-tsakas/romeos-display-v2/squareline-arc-import/TH_A/SquareLine_Project/: .project  CMakeLists.txt  lv_conf.h  run.sh
docs/archive/romeos-tsakas/romeos-display-v2/squareline-arc-import/TH_A/SquareLine_Project/ui/: filelist.txt
docs/archive/romeos-tsakas/romeos-display-v2/squareline-arc-import/TH_A/SquareLine_Project/ui/components/: ui_comp_label1.h
docs/archive/romeos-tsakas/romeos-display-v2/squareline-arc-import/TH_A/SquareLine_Project/ui/images/: ui_img_chatgpt1_32x32_png.c  ui_img_col_png.c
docs/archive/romeos-tsakas/romeos-display-v2/squareline-arc-import/components/: ui_comp.h
docs/archive/romeos-tsakas/romeos-display-v2/squareline-arc-import/images/: ui_img_hot_png.c
docs/archive/romeos-tsakas/romeos-display-v2/squareline-arc-import/screens/: ui_Screen1.c
docs/archive/romeos-tsakas/romeos-display-v2/src/squareline/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h
docs/archive/romeos-tsakas/romeos-display-v2/src/squareline/components/: ui_comp_hook.c  ui_comp_hook.h  ui_comp_label1.c
docs/archive/romeos-tsakas/romeos-display-v2/src/squareline/images/: ui_img_1757177593.c  ui_img_chatgpt1_32x32_png.c  ui_img_col_png.c  ui_img_day_p0.c  ui_img_day_p1.c  ui_img_day_p2.c  ui_img_day_p3.c  ui_img_day_p4.c  ui_img_hot_png.c
docs/archive/romeos-tsakas/romeos-display-v2/src/squareline/screens/: ui_THERMOSTAT_1.c  ui_THERMOSTAT_1.h
docs/archive/romeos-tsakas/romeos-display-v3/DISPLAY_A/: CMakeLists.txt  ui.h  ui_helpers.c  ui_helpers.h
docs/archive/romeos-tsakas/romeos-display-v3/DISPLAY_A/components/: ui_comp.h  ui_comp_hook.h  ui_comp_label1.c
docs/archive/romeos-tsakas/romeos-display-v3/DISPLAY_A/fonts/: ui_font_BigTemp12.c  ui_font_BigTemp123.c  ui_font_BigTemp221.c  ui_font_Font_40.c  ui_font_Font_55.c
docs/archive/romeos-tsakas/romeos-display-v3/DISPLAY_A/images/: ui_img_1311305648.c  ui_img_313400180.c  ui_img_54340154.c  ui_img_589449191.c
(+618 files in other folders)
